--- a/index.html
+++ b/index.html
@@ -2,151 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>覃晓莹个人简历</title>
-    <link type="text/css" rel="stylesheet"  href="style.css"/>
-    <script src="yuan.js"></script>
+    <title>Title</title>
 </head>
 <body>
-<div id="container">
-    <div id="header">
-        <p><span>覃晓莹</span><br/>
-            &nbsp前端开发工程师</p>
-        <div id="daohang">
-            <ul>
-                <li><a href="#title1">关于我</a></li>
-                <li class="tiao"></li>
-                <li><a href="#title11">个人技能</a></li>
-                <li class="tiao"></li>
-                <li><a href="#title_left1">项目经验</a></li>
-                <li class="tiao"></li>
-                <li><a href="#title_left2">在校经历</a></li>
-            </ul>
-        </div>
-
-    </div>
-
-
-
-    <div id="me">
-        <div id="box_left">
-            <div id="title1">关于我</div>
-            <div class="me_con">
-                <ul>
-                    <li><b>生日</b>&nbsp09-19-1994</li>
-                    <li><b>籍贯</b>&nbsp广西河池</li>
-                    <li><b>电话</b>&nbsp15927362943</li>
-                    <li><b>邮箱</b>&nbspqxy_0210@163.com</li>
-                </ul>
-            </div>
-
-            <div id="contact">
-                <img src="../resume1/pic/11.jpg">
-                <img src="../resume1/pic/22.jpg">
-                <img src="../resume1/pic/33.jpg">
-                <img src="../resume1/pic/44.jpg">
-            </div>
-
-            <div id="title11">
-                个人技能
-            </div>
-        </div>
-
-        <div id="box_right">
-            <div class="pic">
-                <img src="../resume1/pic/21.jpg"/>
-            </div>
-            <div id="myself">
-                <p>对互联网有激情，熟练掌握HTML5、CSS3和JAVASCRIPT,了解C和C++，熟悉基本的数据结构和算法。在代码的整齐性及美观上有强迫症。
-                    希望在两年内成为独立的前端工程师。自学能力强，欣赏自己解决问题的能力。</p>
-            </div>
-        </div>
-
-    </div>
-
-    <div id="skill">
-        <div id="skill1_1">
-            <canvas id="er_skill1" width="150px" height="150"></canvas>
-            <p>HTML</p>
-        </div>
-        <div id="skill1_2">
-            <canvas id="er_skill2" width="150px" height="150"></canvas>
-            <p>CSS</p>
-        </div>
-        <div id="skill1_3">
-            <canvas id="er_skill3" width="150px" height="150"></canvas>
-            <p>JAVASCRIPT</p>
-        </div>
-        <div id="skill1_4">
-            <canvas id="er_skill4" width="150px" height="150"></canvas>
-            <p>PHOTOSHOP</p>
-        </div>
-    </div>
-
-
-
-
-    <div id="skill_1">
-        <div class="title2">
-            <div id="title_left1">
-                项目经验
-            </div>
-            <div class="title_right">
-
-            </div>
-        </div>
-        <div class="con">
-            <ul>
-                <li><b>校园实时通讯APP</b> <span>2014-2015</span></li>
-                <p>该项目由我校计算机课程的老师组织，项目组人员都是有兴趣的同学自愿参加学习。我在组内的任务是官网制作。此前我从未接触过关于网页制作的知识。为完成项目任务，一边百度一边找实例一边自学基础。
-                    最终使用div布局以及javascript的简单鼠标经过事件完成了自己制作的第一个网页。我把这次任务的圆满成功归功于自己解决问题的能力。</p>
-
-                <li><b>Swear</b>
-                    <span>2015-2016</span></li>
-                <p>该项目由我班三位同学组成。该项目获校互联网设计大赛三等奖。项目组中，我的任务是界面制作以及创意。因为本人对android的知识掌握得实在有限，所以是使用html+css+javascript制作的android程序。
-                    客户端存储技术使用到的是sessionStorage技术。为完成项目，我不仅学习了android知识，还更巩固了前端技术，更明白了人多力量大的道理。</p>
-
-            </ul>
-        </div>
-
-    </div>
-
-
-
-    <div id="skill_2">
-        <div class="title2">
-            <div id="title_left2">
-                在校经历
-            </div>
-            <div class="title_right">
-
-            </div>
-        </div>
-
-        <div class="con">
-            <ul>
-                <li><b>武汉科技大学</b> <span>2013-2016</span></li>
-
-                <p> 信息与计算科学: <br>
-
-                    &nbsp&nbsp&nbsp离散数学、   数据结构、    C语言程序设计 、   计算机组成原理、
-                    高等代数    、算法分析    <br>&nbsp&nbsp&nbsp C++程序设计、      操作系统、
-                    数学分析 、   数据库 、      汇编语言  、       计算机网络
-                </p>
-
-
-                <li><b>参与活动</b> <span>2014-2015</span></li>
-                <p>喜欢运动，连续三年参加校运动会，参加的项目基本上都有获奖。<br>
-                    喜欢打篮球，连续三年参加校篮球赛，带领球队从倒数到前三，成功逆袭。<br>
-                    喜欢写东西，参加学校校报记者团。采访了很多校内名人，写过三五篇外媒。<br></p>
-
-            </ul>
-        </div>
-
-    </div>
-
-
-
-</div>
-
+nihao
 </body>
 </html>
