--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </div>
 
             <div id="contact">
-                <img src="../resume1/pic/11.jpg">
-                <img src="../resume1/pic/22.jpg">
-                <img src="../resume1/pic/33.jpg">
-                <img src="../resume1/pic/44.jpg">
+                <img src="../resume/pic/11.jpg">
+                <img src="../resume/pic/22.jpg">
+                <img src="../resume/pic/33.jpg">
+                <img src="../resume/pic/44.jpg">
             </div>
 
             <div id="title11">
@@ -53,7 +53,7 @@
 
         <div id="box_right">
             <div class="pic">
-                <img src="../resume1/pic/21.jpg"/>
+                <img src="../resume/pic/21.jpg"/>
             </div>
             <div id="myself">
                 <p>对互联网有激情，熟练掌握HTML5、CSS3和JAVASCRIPT,了解C和C++，熟悉基本的数据结构和算法。在代码的整齐性及美观上有强迫症。
